Add functionality for inserting data and neumorphic design

--- a/src/Todo.css
+++ b/src/Todo.css
@@ -1,46 +1,108 @@
+:root {
+  --list-color: #d0e2ec;
+  --text-color: rgb(37, 32, 32);
+  --box-shadow-var1: #b1c0c9;
+  --box-shadow-var2: #efffff;
+}
+
+::selection {
+  background: #72cbb9;
+}
+
+/*.light {
+  --list-color: #d0e2ec;
+  --text-color: rgb(37, 32, 32);
+  --box-shadow-var1: #b1c0c9;
+  --box-shadow-var2: #efffff;
+}
+
+ .dark{
+  --list-color: #161718;
+  --text-color: whitesmoke;
+  --box-shadow-var1: #0a0b0b;
+  --box-shadow-var2: #222325;
+} */
+
 body {
-    background: #c9e4de;
-    font-family: cursive;
-  }
+  background: var(--list-color);
+  font-family: "Baloo Thambi 2", cursive;
+  font-weight: 100;
+}
 
-  .todo-container {
-    background: #c6def1;
-    width: 40vw;
-    margin: 10em auto;
-    border-radius: 15px;
-    padding: 20px 10px;
-    color: black;
-    border: 3px solid #231942;
-  }
+.todo-container {
+  width: 30vw;
+  margin: 10em auto;
+  padding: 20px 10px;
+  text-align: center;
+  color: var(--text-color);
+  border-radius: 50px;
+  background: var(--list-color);
+  box-shadow: 20px 20px 60px var(--box-shadow-var1),
+    -20px -20px 60px var(--box-shadow-var2);
+}
 
-  .task {
-    border: 1px solid #231942;
-    border-radius: 10px;
-    padding: 0.5em;
-    margin: 0.5em;
-  }
+.task {
+  padding: 0.5em;
+  margin: 0.5em;
+}
 
-  .task button{
-    background: rgb(12, 124, 251);
-    border-radius: 5px;
-    margin: 0px 5px;
-    padding: 3px 5px;
-    border: none;
-    cursor: pointer;
-    color: white;
-    float: right;
-  }
+.task:hover{
+  cursor: pointer;
+}
 
-  .header {
-    margin: 0.5em;
-    font-size: 2em;
-    text-align: center;
-  }
+.task button {
+  background: rgb(12, 124, 251);
+  border-radius: 5px;
+  margin: 0px 5px;
+  padding: 3px 5px;
+  border: none;
+  cursor: pointer;
+  color: white;
+  float: right;
+}
 
-  .create-task input[type=text] {
-    margin: 2.5em 2em;
-    width: 80%;
-    outline: none;
-    border: none;
-    padding: 0.7em;
-  }
+.header {
+  margin: 0.5em;
+  font-size: 2em;
+  text-align: center;
+}
+
+.create-task {
+  margin: 2.5em 2em;
+  width: 80%;
+  outline: none;
+  border: none;
+  padding: 0.7em;
+}
+
+button {
+  border-radius: 50px;
+  background: #d0e2ec;
+  box-shadow: 10px 10px 20px #b1c0c9, -10px -10px 20px #efffff;
+  border: none;
+  outline: none;
+  transition: 0.2s ease-in-out;
+  padding: 10px;
+  width: 50%;
+  /* margin-left: 43%; */
+}
+
+button:hover {
+  border: none;
+  border-radius: 50px;
+  background: #d0e2ec;
+  box-shadow: 5px 5px 10px #b1c0c9, -5px -5px 10px #efffff;
+  transition: 0.2s ease-in-out;
+}
+
+input[type="text"] {
+  background: #d0e2ec;
+  transition: 0.2s ease-in-out;
+  margin: 2.5em 2em;
+  width: 80%;
+  outline: none;
+  padding: 0.7em;
+  border: none;
+  border-bottom: 1px solid black;
+  text-shadow: 0 0 0 0;
+}
