--- a/src/Todo.css
+++ b/src/Todo.css
@@ -31,7 +31,7 @@ body {
 
 .todo-container {
   width: 30vw;
-  margin: 10em auto;
+  margin: 6em auto;
   padding: 20px 10px;
   text-align: center;
   color: var(--text-color);
@@ -46,7 +46,7 @@ body {
   margin: 0.5em;
 }
 
-.task:hover{
+.task:hover {
   cursor: pointer;
 }
 
@@ -105,4 +105,26 @@ input[type="text"] {
   border: none;
   border-bottom: 1px solid black;
   text-shadow: 0 0 0 0;
+}
+
+.information {
+  border-radius: 50%;
+  width: 25px;
+  height: 25px;
+  background: tomato;
+  position: relative;
+  left: 90%;
+  background: #d0e2ec;
+  box-shadow: 10px 10px 20px #b1c0c9, -10px -10px 20px #efffff;
+  transition: ease-in .5s;
+  /* clip-path: polygon(97.72% 6%, 97.72% 90%, 10.24% 94%, 10% 10%); */
+}
+
+.information:hover {
+  /* background: purple; */
+  border-radius: 0%;
+  width: 100%;
+  height: 100%;
+  transition: ease-in .5s;
+  clip-path: polygon(97.72% 6%, 97.72% 90%, 0.25% 106%, 0.01% 14%);
 }
