--- a/src/styles/Todo.css
+++ b/src/styles/Todo.css
@@ -1,20 +1,30 @@
-:root {
+::selection {
+  background: #72cbb9;
+  color: var(--text-color);
+}
+
+.light {
   --list-color: #d0e2ec;
   --text-color: rgb(37, 32, 32);
   --box-shadow-var1: #b1c0c9;
   --box-shadow-var2: #efffff;
+  --header-hover: #2aa88fdc;
+  --caret-color: black;
 }
 
-::selection {
-  background: #72cbb9;
-  color: rgb(37, 32, 32);
+.dark {
+  --list-color: #1d1f20;
+  --text-color: #cfdee6;
+  --box-shadow-var1: #0f1010;
+  --box-shadow-var2: #2c2f30;
+  --header-hover: #2aa88fdc;
+  --caret-color: white;
 }
 
 body {
-  background: #d0e2ec;
-  /* font-family: "Baloo Thambi 2", cursive; */
+  background: var(--list-color);
+  transition: 0.1s ease;
   font-family: "Nunito Sans", sans-serif;
-  /* font-weight: bold; */
 }
 
 .todo-container {
@@ -22,10 +32,12 @@ body {
   margin: 6em auto;
   padding: 20px 10px;
   text-align: center;
-  color: rgb(37, 32, 32);
+  color: var(--text-color);
+  transition: 0.3s ease;
   border-radius: 10px;
-  background: #d0e2ec;
-  box-shadow: 20px 20px 60px #b1c0c9, -20px -20px 60px #efffff;
+  background: var(--list-color);
+  box-shadow: 20px 20px 60px var(--box-shadow-var1),
+    -20px -20px 60px var(--box-shadow-var2);
 }
 
 .task {
@@ -39,30 +51,20 @@ body {
   color: #2aa88fdc;
 }
 
-.task button {
-  background: rgb(12, 124, 251);
-  border-radius: 10px;
-  margin: 0px 5px;
-  padding: 3px 5px;
-  border: none;
-  cursor: pointer;
-  color: white;
-  float: right;
-}
-
 .header {
-  margin: 0.5em;
+  margin: 1.5em;
   font-size: 2em;
   text-align: center;
-  background: #d0e2ec;
-  box-shadow: 5px 5px 15px #b1c0c9, -5px -5px 15px #efffff;
+  background: var(--list-color);
+  box-shadow: 5px 5px 15px var(--box-shadow-var1),
+    -5px -5px 15px var(--box-shadow-var2);
   padding: 1em;
   border-radius: 10px;
   transition: 0.1s ease-in-out;
 }
 
 .header:hover {
-  color: #2aa88fdc;
+  color: var(--header-hover);
   transition: 0.1s ease-in-out;
 }
 
@@ -76,8 +78,10 @@ body {
 
 button {
   border-radius: 10px;
-  background: #d0e2ec;
-  box-shadow: 5px 5px 10px #b1c0c9, -5px -5px 10px #efffff;
+  background: var(--list-color);
+  color: var(--text-color);
+  box-shadow: 5px 5px 10px var(--box-shadow-var1),
+    -5px -5px 10px var(--box-shadow-var2);
   border: none;
   outline: none;
   transition: 0.1s ease-in-out;
@@ -88,8 +92,9 @@ button {
 button:active {
   transition: 5s ease-in-out;
   border-radius: 10px;
-  background: #d0e2ec;
-  box-shadow: inset 5px 5px 10px #b1c0c9, inset -5px -5px 10px #efffff;
+  background: var(--list-color);
+  box-shadow: inset 5px 5px 10px var(--box-shadow-var1),
+    inset -5px -5px 10px var(--box-shadow-var2);
 }
 
 button:hover {
@@ -99,13 +104,31 @@ button:hover {
 }
 
 input[type="text"] {
-  background: #d0e2ec;
+  background: var(--list-color);
   margin: 2.5em 2em;
   width: 80%;
   outline: none;
   padding: 0.7em;
   border: none;
   border-radius: 10px;
-  background: #d0e2ec;
-  box-shadow: inset 5px 5px 10px #afbec6, inset -5px -5px 10px #f1ffff;
+  color: var(--text-color);
+  caret-color: var(--caret-color);
+  background: var(--list-color);
+  box-shadow: inset 5px 5px 10px var(--box-shadow-var1),
+    inset -5px -5px 10px var(--box-shadow-var2);
+}
+
+.themeButton {
+  width: 2.5em;
+  height: 2.5em;
+  border-radius: 50%;
+  position: relative;
+  float: right;
+  margin-right: 0.5em;
+  transition: 0.5s ease-in-out;
+}
+
+.themeButton:hover {
+  border-radius: 50%;
+  transition: 0.5s ease-in-out;
 }
